# IronFix

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  code_coverage.yml  docker.yml  docs.yml  examples.yml  format_check.yml  lint.yml  semver.yml  tests.yml
Docker/: README.md  fast.Dockerfile  fix40.Dockerfile  fix41.Dockerfile  fix42.Dockerfile  fix43.Dockerfile  fix44.Dockerfile  fix50.Dockerfile  fix50sp1.Dockerfile  fix50sp2.Dockerfile
doc/: architecture.md  fix_operations.md
doc/adr/: 0001-criterion-benchmark-harness.md
ironfix-codegen/: Cargo.toml
ironfix-codegen/src/: generator.rs  lib.rs
ironfix-codegen/tests/: generated_code_compiles.rs  regenerate_golden.rs
ironfix-codegen/tests/common/: mod.rs
ironfix-codegen/tests/golden/: sample.rs
ironfix-core/src/: error.rs  field.rs  lib.rs  message.rs  types.rs  version.rs
ironfix-derive/: Cargo.toml
ironfix-derive/src/: lib.rs
ironfix-derive/tests/: generic_compiles.rs
ironfix-dictionary/: Cargo.toml
ironfix-dictionary/spec/: README.md
ironfix-dictionary/src/: lib.rs  loader.rs  schema.rs  validator.rs
ironfix-engine/: Cargo.toml
ironfix-engine/src/: acceptor.rs  application.rs  builder.rs  connection.rs  error.rs  initiator.rs  lib.rs  outbound.rs  reactor.rs  wire.rs
ironfix-engine/tests/: acceptor_tests.rs  initiator_tests.rs
ironfix-example/: Cargo.toml
ironfix-example/examples/: fast_client.rs  fast_server.rs  fast_server_lockfree.rs  fast_server_spsc.rs  fix40_client.rs  fix40_server.rs  fix41_client.rs  fix41_server.rs  fix42_client.rs  fix42_server.rs  fix43_client.rs  fix43_server.rs  fix44_client.rs  fix44_engine_client.rs  fix44_server.rs  fix44_server_channel.rs  fix50_client.rs  fix50_server.rs  fix50sp1_client.rs  fix50sp1_server.rs  fix50sp2_client.rs  fix50sp2_server.rs
ironfix-example/examples/common/: mod.rs
ironfix-example/src/: demo.rs  fast_market_data.rs  lib.rs
ironfix-fast/: Cargo.toml
ironfix-fast/benches/: fast.rs
ironfix-fast/src/: decoder.rs  encoder.rs  error.rs  lib.rs  operators.rs  pmap.rs
ironfix-session/src/: config.rs  heartbeat.rs  lib.rs  sequence.rs  state.rs
ironfix-store/src/: lib.rs  memory.rs  stored.rs  traits.rs
ironfix-tagvalue/: Cargo.toml
ironfix-tagvalue/benches/: tagvalue.rs
ironfix-tagvalue/src/: checksum.rs  decoder.rs  encoder.rs  lib.rs
ironfix-transport/: Cargo.toml
ironfix-transport/benches/: framing.rs
ironfix-transport/src/: codec.rs  lib.rs
