[package]
name = "ironfix-derive"
description = "Procedural macros for IronFix FIX protocol engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
# Integration tests derive against the real traits to prove the expansion
# type-checks; a proc-macro crate cannot use its own derives in-crate. Dev-only,
# so it does not change the published dependency graph.
ironfix-core = { path = "../ironfix-core" }
